# nest.py

./: .gitignore  Makefile  example.py  main.py  pyproject.toml
docs/: index.html
docs/api/nest/core/: controller.html  index.html  injectable.html  nest_error.html  nest_module.html
docs/api/nest/scripts/: index.html  install_plugins.html  merge_apps.html  register_app_routes.html  types.html
docs/core/: controller.html  factory.html  injectable.html  nest_error.html  nest_module.html
docs/internals/: controller.html  error.html  index.html  module.html  provider.html
docs/scripts/: app_context.html  assert_type.html  create_error_callback.html  create_error_handlers.html  create_route_callback.html  index.html
docs/verbs/: create_route.html  error.html  index.html  verbs.html
example/: app_error.py  app_module.py  swagger_configs.py
example/app/: module.py
example/cats/: __init__.py  controller.py  model.py  module.py  service.py
example/user/: __init__.py  controller.py  model.py  module.py  service.py
nest/: __init__.py
nest/core/: __init__.py  controller.py  factory.py  injectable.py  methods.py  nestModule.py  nest_error.py  nest_module.py
nest/internals/: __init__.py  compile.py  controller.py  error.py  module.py  provider.py
nest/scripts/: __init__.py  app_context.py  assert_type.py  compile.py  create_error_callback.py  create_error_handlers.py  create_route_callback.py  install_plugins.py  merge_apps.py  register_app_routes.py  types.py
nest/verbs/: __init__.py  create_route.py  error.py  get.py  type_to_verb.py  verbs.py
(+1 files in other folders)
