[tool.poetry]
name = "nest.py"
version = "0.1.0"
description = "A python version of nest.js."
authors = ["MohamedElmdary <engm5081@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
